--- a/package.json
+++ b/package.json
@@ -6,46 +6,48 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
+    "clean": "rimraf dist",
     "start": "ts-node -r tsconfig-paths/register -r dotenv/config src/main.ts",
     "start:dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
-    "prestart:prod": "rimraf dist && tsc",
-    "start:prod": "node --require 'dotenv/config' dist/main.js",
+    "start:prod": "node -r dotenv/config dist/main.js",
+    "start:optimized": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 -r dotenv/config dist/main.js",
+    "postinstall": "npm run build",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config test/e2e/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^5.4.0",
-    "@nestjs/core": "^5.4.0",
+    "@nestjs/common": "^5.4.1",
+    "@nestjs/core": "^5.4.1",
     "@nestjs/typeorm": "^5.2.2",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "compression": "^1.7.3",
     "dotenv": "^6.1.0",
     "nunjucks": "^3.1.4",
-    "pg": "^7.6.1",
+    "pg": "^7.7.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
     "typeorm": "^0.2.9",
-    "typescript": "^3.0.1"
+    "typescript": "^3.2.1"
   },
   "devDependencies": {
-    "@nestjs/testing": "^5.1.0",
+    "@nestjs/testing": "^5.4.1",
     "@types/compression": "0.0.36",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.1",
-    "@types/node": "^10.7.1",
+    "@types/jest": "^23.3.10",
+    "@types/node": "^10.12.11",
     "@types/nunjucks": "^3.1.0",
     "@types/supertest": "^2.0.5",
     "jest": "^23.5.0",
-    "nodemon": "^1.18.3",
+    "nodemon": "^1.18.7",
     "supertest": "^3.1.0",
-    "ts-jest": "^23.1.3",
+    "ts-jest": "^23.10.5",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.5.0",
@@ -58,7 +60,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": "test",
     "testRegex": ".spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
