--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,7 +1,13 @@
 {
   "extends": "tsconfig.json",
   "compilerOptions": {
-    "types": ["jest", "node"]
+    "types": [
+      "jest", 
+      "node"
+    ]
   },
-  "include": ["**/*.spec.ts", "**/*.d.ts"]
+  "include": [
+    "test/**/*.spec.ts", 
+    "test/**/*.d.ts"
+  ]
 }
