--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "debug.node.autoAttach": "off",
-    "git.ignoreLimitWarning": true
+    "debug.node.autoAttach": "on",
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
