--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
-    "typeorm": "^0.2.9",
-    "typescript": "^3.2.1"
+    "typeorm": "^0.2.9"
   },
   "devDependencies": {
     "@nestjs/testing": "^5.4.1",
@@ -52,7 +51,9 @@
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.5.0",
     "tslint": "5.11.0",
-    "tslint-config-standard": "^8.0.1"
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.2.2",
+    "typescript-tslint-plugin": "^0.1.2"
   },
   "jest": {
     "moduleFileExtensions": [
