--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "alwaysStrict": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -10,7 +10,7 @@
     "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "outDir": "dist",
+    "outDir": "./dist",
     "removeComments": true,
     "sourceMap": true,
     "strictBindCallApply": true,
@@ -24,6 +24,6 @@
     ]
   },
   "exclude": [
-    "node_modules"
+    "node_modules/**"
   ]
 }
